--- a/main.css
+++ b/main.css
@@ -5,12 +5,30 @@
 .italic{
     font-style: italic;
 }
-.section {
+
+.name-section{
     margin: 0 auto;
     width: 800px;
     text-align: center;
 }
 
+.section {
+    margin: 0 auto;
+    width: 800px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+h1{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+h2{
+    text-align: left;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
 .summary-content {
     margin: 0 auto;
     width: 800px;
@@ -35,12 +53,20 @@ table {
     text-align: left;
 }
 
+th{
+    padding: 0;
+    margin: 0;
+}
+
 td{
-    /*border: 1px solid black;*/
     vertical-align: top;
 }
 
 td ul{
     text-align: left;
     margin: 0;
+}
+
+hr{
+    border-top: 1px solid black;
 }
