--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@
     margin: 0 auto;
     width: 800px;
     text-align: center;
+    margin-bottom: 30px;
 }
 
 .section {
@@ -29,6 +30,7 @@ h2{
     margin-top: 2px;
     margin-bottom: 2px;
 }
+
 .summary-content {
     margin: 0 auto;
     width: 800px;
@@ -68,5 +70,7 @@ td ul{
 }
 
 hr{
-    border-top: 1px solid black;
+    border-style: solid;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
