--- a/main.css
+++ b/main.css
@@ -1,6 +1,14 @@
+/* CSS */
+:root {
+    --primary-color: #1a1a1a;
+    --secondary-color: #2c2c2c;
+    --accent-color: #3498db;
+    --font-family: 'Open Sans', sans-serif;
+}
+
 body {
-    font-family: Garamond, serif;
-    background-color: #1a1a1a;
+    font-family: var(--font-family);
+    background-color: var(--primary-color);
     color: #fff;
     display: flex;
     justify-content: center;
@@ -8,18 +16,11 @@ body {
     min-height: 100vh;
 }
 
-.container {
-    display: flex;
-    max-width: 1200px;
-    width: 100%;
-    padding: 10px;
-}
-
 .sidebar {
     width: 250px;
     padding: 20px;
-    background-color: #2c2c2c;
-    height: auto;
+    background-color: var(--secondary-color);
+    height:auto;
     border-radius: 10px;
     margin-bottom: 20px;
     position: fixed;
@@ -54,7 +55,7 @@ body {
     text-align: left;
     max-width: 800px;
     padding: 20px;
-    background-color: #2c2c2c;
+    background-color: var(--secondary-color);
     border-radius: 10px;
     margin-bottom: 20px;
 }
@@ -70,7 +71,7 @@ h2 {
 }
 
 table {
-    width: 800px;
+    width: 100%;
     padding-bottom: 10px;
 }
 
@@ -109,5 +110,17 @@ td ul {
 .content a,
 .content a:hover,
 .content a:visited {
-    color: #3498db;
+    color: var(--accent-color);
+}
+
+@media (max-width: 768px) {
+    .sidebar {
+        position: relative;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .content {
+        margin-left: 0;
+    }
 }
