--- a/main.css
+++ b/main.css
@@ -1,14 +1,6 @@
-/* CSS */
-:root {
-    --primary-color: #1a1a1a;
-    --secondary-color: #2c2c2c;
-    --accent-color: #3498db;
-    --font-family: 'Open Sans', sans-serif;
-}
-
 body {
-    font-family: var(--font-family);
-    background-color: var(--primary-color);
+    font-family: Garamond, serif;
+    background-color: #1a1a1a;
     color: #fff;
     display: flex;
     justify-content: center;
@@ -16,11 +8,18 @@ body {
     min-height: 100vh;
 }
 
+.container {
+    display: flex;
+    max-width: 1200px;
+    width: 100%;
+    padding: 10px;
+}
+
 .sidebar {
     width: 250px;
     padding: 20px;
-    background-color: var(--secondary-color);
-    height:auto;
+    background-color: #2c2c2c;
+    height: auto;
     border-radius: 10px;
     margin-bottom: 20px;
     position: fixed;
@@ -55,7 +54,7 @@ body {
     text-align: left;
     max-width: 800px;
     padding: 20px;
-    background-color: var(--secondary-color);
+    background-color: #2c2c2c;
     border-radius: 10px;
     margin-bottom: 20px;
 }
@@ -71,7 +70,7 @@ h2 {
 }
 
 table {
-    width: 100%;
+    width: 800px;
     padding-bottom: 10px;
 }
 
@@ -110,17 +109,5 @@ td ul {
 .content a,
 .content a:hover,
 .content a:visited {
-    color: var(--accent-color);
-}
-
-@media (max-width: 768px) {
-    .sidebar {
-        position: relative;
-        width: 100%;
-        margin-bottom: 20px;
-    }
-
-    .content {
-        margin-left: 0;
-    }
+    color: #3498db;
 }
